syntax = "proto3";

package ci.tracker.migration;

import "ci/tasklet/registry/common/tracker/create_issue/proto/create_issue.proto";
import "ci/tasklet/common/proto/service.proto";
import "tasklet/api/tasklet.proto";
import "tasklet/services/yav/proto/yav.proto";
import "tasklet/services/ci/proto/ci.proto";

message Config {
    yav_service.YavSecretSpec secret = 1;
}

message MigrationConfig {
    RepositoryType type = 1;
    string url = 2;
    string arcadia_path = 3;
    string git_branch = 4; // optional

    enum RepositoryType {
        unknown = 0;
        git = 1;
        svn = 2;
        other = 3;
    }
}

message Input {
    ci.TaskletContext context = 1;
    ci.tracker.create_issue.Issue issue = 2;
    Config config = 3;
}

message Output {
    ci.tracker.create_issue.Issue issue = 1;
    Config config = 2;
    MigrationConfig migration = 3;
}

message Context {
    option (tasklet.context) = true;

    string id = 1 [(tasklet.inject) = true];
    yav_service.YavService yav = 2 [(tasklet.inject) = true];
    ci.CiService ci = 3 [(tasklet.inject) = true];
}

message CreateIssue {
    option (tasklet.tasklet_interface) = true;

    Context ctx = 1;

    Input input = 2 [(tasklet.input) = true];
    Output output = 3 [(tasklet.output) = true];
}
